<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FireDetectionSet" Id="{5cb45d6d-8880-457c-8f25-162a610efcce}">
    <Declaration><![CDATA[TYPE ST_FireDetectionSet :
STRUCT
	b_SilenceSounder	:	BOOL; //only disables currently activated alarm.
	b_TestSounder		:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>