<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FireSystem_Events" Id="{a47fa298-6191-40e3-abfb-fd566d2a024d}">
    <Declaration><![CDATA[TYPE ST_FireSystem_Events :
STRUCT
	b_CODetFault		:	BOOL;
	b_CODetWarning1		:	BOOL;
	b_CODetWarning2		:	BOOL;
	b_CODetAlarm		:	BOOL;
	
	b_SmokeDetFault		:	BOOL;
	b_SmokeDetAlarm		:	BOOL;
	
	b_AlarmMuted		:	BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>