<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SmokeDetIO" Id="{3a7814f8-0ce5-48e3-80e9-5951763f2036}">
    <Declaration><![CDATA[TYPE ST_SmokeDetIO :
STRUCT
	b_SmokeDetectorSignal_OK 	: BOOL;
	b_SmokeDetectorPower_OK 	: BOOL;
	b_SmokeDetectorShutdown		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>