<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eCOAlarmStatus" Id="{406822b2-650f-4fa9-aaa4-84cc6bc1ef5f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eCOAlarmStatus :
(
	Error			:= 0,
	Normal 			:= 1,
	WarningLevel1 	:= 2,
	WarningLevel2 	:= 3,
	Alarm 			:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>