<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eFireAlarmStatus" Id="{e016f3e2-c209-4f9d-8874-2d45dabfff71}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eFireAlarmStatus :
(
	Error := 0,
	Normal := 1,
	Alarm := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>