<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FireDetection_set" Id="{c56cc4e4-3146-4036-84b5-d27cae4e3504}">
    <Declaration><![CDATA[TYPE ST_FireDetection_set :
STRUCT
	SilenceSounder	:	BOOL; //only disables currently activated alarm.
	TestSounder		:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>