<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FireSystem_Events_1" Id="{babbd11a-7e56-4e65-bf39-bfd499838bf9}">
    <Declaration><![CDATA[TYPE ST_FireSystem_Events_1 :
STRUCT
	CODetFault		:	BOOL;
	CODetWarning	:	BOOL;
	CODetAlarm		:	BOOL;
	SmokeDetFault	:	BOOL;
	SmokeDetAlarm	:	BOOL;
	AlarmMuted		:	BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>