<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SmokeDetIO_1" Id="{ba6beb60-9012-45ab-b661-547a643ea319}">
    <Declaration><![CDATA[TYPE ST_SmokeDetIO_1 :
STRUCT
	SmokeDetectorSignal_OK 	: BOOL;
	SmokeDetectorPower_OK 	: BOOL;
	SmokeDetectorShutdown	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>